
  o Bug Fixes:
    * Conary no longer checks for the existence of a db journal on startup,
      making it possible to perform cvc operations while updating your
      system. (CNY-2958)
    * Files with (only) unsatisfied Java requirements that are filtered
      out using r.Requires(exceptDeps) no longer have their provides
      removed. (CNY-3001)

  o Build Changes:
    * A new type of metadata information, storing key-value pairs,
      is now available. (CNY-2983)

Changes in 2.0.26:
  o Build Changes:
    * The way that factories are cooked has been changed so that buildRequires
      are set (for building in rMake) and so that platforms may override the
      default build requirements. (CNY-2986)

  o Bug Fixes:
    * A bug causing cooks to fail when Perl was not installed on the
      build system has been fixed. (CNY-2989)
    * A bug that prevented Java dependencies from being parsed
      correctly in some cases, for example when given on a "conary rq
      --what-provides" command line, has been fixed.  Previously a
      "bad java dependency: flags required" error message was
      generated. (CNY-2990)

Changes in 2.0.25:
  o Bug Fixes:
    * "conary emerge" no longer emits warnings. (CNY-2835)
    * A bug that prevented proper ownership and permissions from being
      recorded when using r.addArchive(..., perserveOwnership=True)
      and the archive had a prefix of "./" has been fixed.
      Additionally, a bug that could cause permissions to be assigned
      to files with similar paths as those created by addArchive has
      been fixed. (CNY-2953)
    * Promote in 2.0.24 could traceback instead of printing an error message
      if no troves were present to clone.
    * A bug causing addSource to use the wrong file if there was a name
      collision between a filename in an rpm and the source directory
      has been fixed. (CNY-2627)
    * A bug causing createNewSourceTrove to erroneously change pathIds
      has been fixed. (CNY-2971)